# NeuralFS

./: .gitignore  CHANGELOG.md  README.md
.kiro/specs/neural-fs-core/: FINAL_CHECKPOINT_REPORT.md  design.md  requirements.md  tasks.md
scripts/: build-sidecar.ps1  build-sidecar.sh  verify-final-checkpoint.ps1
src/: App.css  App.tsx  index.html  index.tsx  package.json  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/migrations/: 001_initial_schema.sql  002_add_file_id.sql  003_add_session_columns.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/asset/: error.rs  mod.rs  routes.rs  server.rs  tests.rs
src-tauri/src/commands/: config.rs  mod.rs  onboarding.rs  protocol.rs  relations.rs  search.rs  status.rs  tags.rs
src-tauri/src/config/: migration.rs  mod.rs  storage.rs  tests.rs
src-tauri/src/core/: config.rs  error.rs  mod.rs  runtime.rs  utils.rs
src-tauri/src/core/types/: chunk.rs  file.rs  mod.rs  relation.rs  search.rs  tag.rs
src-tauri/src/db/: migration.rs  mod.rs  tests.rs
src-tauri/src/embeddings/: config.rs  diluted.rs  error.rs  image_embedder.rs  mod.rs  model_manager.rs  tests.rs  text_embedder.rs  vram_manager.rs
src-tauri/src/highlight/: launcher.rs  mod.rs  navigator.rs  tests.rs
src-tauri/src/indexer/: error.rs  mod.rs  tests.rs
src-tauri/src/inference/: anonymizer.rs  cloud.rs  error.rs  hybrid.rs  local.rs  merger.rs  mod.rs  tests.rs  types.rs
src-tauri/src/logging/: config.rs  export.rs  metrics.rs  mod.rs  rotation.rs  tests.rs
src-tauri/src/os/: activity.rs  mod.rs  stub.rs  tests.rs
src-tauri/src/os/thumbnail/: cache.rs  mod.rs  stub_impl.rs  windows_impl.rs
src-tauri/src/os/windows/: desktop.rs  display_listener.rs  handle_manager.rs  keyboard.rs  mod.rs  monitor.rs  taskbar.rs
src-tauri/src/parser/: code.rs  mod.rs  pdf.rs  tests.rs  text.rs
src-tauri/src/preview/: document.rs  image.rs  mod.rs  tests.rs  text.rs
src-tauri/src/protocol/: README.md  handler.rs  mod.rs  tests.rs
src-tauri/src/reconcile/: mod.rs  tests.rs
src-tauri/src/relation/: block_rules.rs  correction.rs  engine.rs  error.rs  mod.rs  session.rs  tests.rs
src-tauri/src/search/: hybrid.rs  intent.rs  mod.rs  tests.rs  text_index.rs  tokenizer.rs
src-tauri/src/tag/: correction.rs  error.rs  hierarchy.rs  manager.rs  mod.rs  sensitive.rs  tests.rs
src-tauri/src/telemetry/: collector.rs  config.rs  consent.rs  events.rs  mod.rs  tests.rs
src-tauri/src/update/: mod.rs  model.rs  self_update.rs  tests.rs
src-tauri/src/vector/: config.rs  error.rs  mod.rs  store.rs  tests.rs
src-tauri/src/watchdog/: heartbeat.rs  mod.rs  shared_memory.rs  supervisor.rs  tests.rs
src-tauri/src/watcher/: filter.rs  mod.rs  tests.rs
src/api/: tauri.ts
src/components/: index.ts
src/components/FileGrid/: FileGrid.css  FileGrid.tsx  index.ts
src/components/OnboardingWizard/: OnboardingWizard.css  OnboardingWizard.tsx  index.ts
src/components/RelationGraph/: RelationGraph.css  RelationGraph.tsx  index.ts
src/components/SearchBar/: SearchBar.css  SearchBar.tsx
src/styles/: global.css
src/types/: config.ts  index.ts  onboarding.ts  relations.ts  search.ts  tags.ts
(+6 files in other folders)
