[package]
name = "neural-fs"
version = "0.1.0"
description = "AI-driven immersive file system shell"
authors = ["NeuralFS Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.75"

[lib]
name = "neural_fs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "watchdog"
path = "src/bin/watchdog.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
# Tauri framework
tauri = { version = "1.5", features = ["shell-open", "protocol-asset", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "uuid", "chrono"] }

# Vector database (embedded)
qdrant-client = { version = "1.7", default-features = false }

# Full-text search
tantivy = "0.21"

# Chinese tokenization
jieba-rs = "0.6"

# Japanese tokenization (optional)
lindera = { version = "0.27", optional = true }

# ONNX Runtime for local inference
ort = { version = "1.16", features = ["load-dynamic"] }

# Tokenizers for proper vocabulary-based tokenization
tokenizers = "0.15"

# File watching
notify = "6.1"

# UUID generation (v7 for time-ordered)
uuid = { version = "1.6", features = ["v7", "serde"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Hashing
blake3 = "1.5"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP client for cloud API
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Secret handling
secrecy = { version = "0.8", features = ["serde"] }

# Configuration
config = "0.13"
directories = "5.0"

# Image processing
image = "0.24"

# N-dimensional arrays for tensor operations
ndarray = "0.15"

# PDF parsing
pdf-extract = "0.7"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Serialization
bincode = "1.3"

# Rate limiting
governor = "0.6"

# LRU cache
lru = "0.12"

# Glob pattern matching
glob = "0.3"

# Regular expressions
regex = "1.10"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_System_ProcessStatus",
    "Win32_Security",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_System_Com",
    "Win32_System_Ole",
] }

[features]
default = ["cuda"]
cuda = []
wal = []
japanese = ["lindera"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
# Property-based testing
proptest = "1.4"
# Arbitrary trait for generating test data
proptest-derive = "0.4"
# Temporary directories for testing
tempfile = "3.10"
# Random number generation for tests
rand = "0.8"
